exports[`(.not).toHaveForbiddenStatus > using axios > .not.toHaveForbiddenStatus > fails when response have status code 403 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveForbiddenStatus()</intensity>

Expected status code to not be 403 received:
  <red>403</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 403,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveForbiddenStatus > using axios > .toHaveForbiddenStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveForbiddenStatus()</intensity>

Expected status code to be 403 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveForbiddenStatus > using got > .not.toHaveForbiddenStatus > fails when response have status code 403 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveForbiddenStatus()</intensity>

Expected status code to not be 403 received:
  <red>403</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 403,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveForbiddenStatus > using got > .toHaveForbiddenStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveForbiddenStatus()</intensity>

Expected status code to be 403 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
